--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,16 @@
 @font-face {
+    font-family: 'Bebas Neue';
+    src: url('./fonts/BebasNeue-Regular.eot');
+    src: url('./fonts/BebasNeue-Regular.eot?#iefix') format('embedded-opentype'),
+        url('./fonts/BebasNeue-Regular.woff2') format('woff2'),
+        url('./fonts/BebasNeue-Regular.woff') format('woff'),
+        url('./fonts/BebasNeue-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
     font-family: 'Brandon Grotesque Bold It';
     src: url('./fonts/BrandonGrotesque-BoldItalic.eot');
     src: url('./fonts/BrandonGrotesque-BoldItalic.eot?#iefix') format('embedded-opentype'),
